- Added storage interface decsription - Make sure the DBus service control interface is registered before the service is created.   Also make sure we already have an event loop at that point. This is important since the   server needs to catch the serviceInitialized signal. - Do not start the strigi service if redland is in use.

BUG: 161380

svn path=/trunk/KDE/kdebase/runtime/; revision=852681